--- a/rtype_client/CMakeLists.txt
+++ b/rtype_client/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(rtype_client main.cpp) 
+add_executable(rtype_client main.cpp ../common/bus.cpp) 
+target_link_libraries(rtype_client dl)
