--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 3.5)
 project (RTYPE)
-add_subdirectory (./module_network)
-add_subdirectory (./rtype_client)
-add_subdirectory (./rtype_server)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
+add_subdirectory(module_network)
+add_subdirectory(rtype_client)
+add_subdirectory(rtype_server)
+add_subdirectory(engine)
