--- a/rtype_server/CMakeLists.txt
+++ b/rtype_server/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(rtype_server main.cpp ../common/bus.cpp)
-target_link_libraries(rtype_server dl)
+add_executable(rtype_server main.cpp)
+target_link_libraries(rtype_server engine)
