fix windows build

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_library(engine STATIC Engine.cpp Worker.cpp bus.cpp)
-target_link_libraries(engine dl sfml-graphics sfml-window sfml-system pthread)
+if(CMAKE_COMPILER_IS_GNUCXX)
+	target_link_libraries(engine dl pthread)
+endif(CMAKE_COMPILER_IS_GNUCXX)
