--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ project (RTYPE)
 if(CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 endif(CMAKE_COMPILER_IS_GNUCXX)
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 add_subdirectory(module_network)
+add_subdirectory(module_game)
+add_subdirectory(module_config)
 add_subdirectory(rtype_client)
 add_subdirectory(rtype_server)
 add_subdirectory(engine)
