--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 add_subdirectory(module_network)
 add_subdirectory(module_game)
 add_subdirectory(module_config)
+add_subdirectory(module_tick)
 add_subdirectory(rtype_client)
 add_subdirectory(rtype_server)
 add_subdirectory(engine)
