--- a/module_game/CMakeLists.txt
+++ b/module_game/CMakeLists.txt
@@ -1,1 +1,3 @@
 add_library(module_game SHARED Module_Game.cpp local.cpp)
+add_library(module_game_client SHARED Module_Game.cpp local.cpp)
+target_compile_definitions(module_game_client PUBLIC -DCLIENT)
