--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(module_sfml)
 add_subdirectory(rtype_client)
 add_subdirectory(rtype_server)
 add_subdirectory(engine)
+file(COPY data/Player.png DESTINATION ${EXECUTABLE_OUTPUT_PATH})
