--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(rtype_client)
 add_subdirectory(rtype_server)
 add_subdirectory(engine)
 file(COPY data/Player.png DESTINATION ${EXECUTABLE_OUTPUT_PATH})
+file(COPY data/Field.png DESTINATION ${EXECUTABLE_OUTPUT_PATH})
