--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(module_game)
 add_subdirectory(module_config)
 add_subdirectory(module_tick)
 add_subdirectory(module_sfml)
+add_subdirectory(module_bydos1)
 add_subdirectory(rtype_client)
 add_subdirectory(rtype_server)
 add_subdirectory(engine)
