buggy bydos. ack system would have been nice...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(rtype_server)
 add_subdirectory(engine)
 file(COPY data/Player.png DESTINATION ${EXECUTABLE_OUTPUT_PATH})
 file(COPY data/Field.png DESTINATION ${EXECUTABLE_OUTPUT_PATH})
+file(COPY data/Bydos1.png DESTINATION ${EXECUTABLE_OUTPUT_PATH})
